--- a/src/main/resources/com/example/diplom1/Diplom1.fxml
+++ b/src/main/resources/com/example/diplom1/Diplom1.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.diplom1.Diplom1"
+            fx:controller="com.example.diplom1.SceneController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
