--- a/src/main/resources/com/example/diplom1/Scene1.fxml
+++ b/src/main/resources/com/example/diplom1/Scene1.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane id="AnchorPane" prefHeight="237.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
-    <children>
-        <Button fx:id="btn2" layoutX="159.0" layoutY="126.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Click to go to scene 1" />
-        <Label layoutX="179.0" layoutY="71.0" text="You re in scene 2" />
-      <Button fx:id="btn3" layoutX="160.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Diplom" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="237.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/21"
+  xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+  <children>
+    <Button fx:id="btn1" layoutX="159.0" layoutY="126.0" mnemonicParsing="false"
+      onAction="#handleButtonAction" text="Click to go to scene 2"/>
+    <Label layoutX="179.0" layoutY="71.0" text="You re in scene 2"/>
+  </children>
 </AnchorPane>
