--- a/src/main/resources/com/example/diplom1/Scene2.fxml
+++ b/src/main/resources/com/example/diplom1/Scene2.fxml
@@ -2,14 +2,71 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" style="-fx-background-color: red;"
-  xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<?import javafx.scene.text.Font?>
+
+<AnchorPane id="AnchorPane" prefHeight="506.0" prefWidth="724.0" style="-fx-background-color: red;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
   <children>
-    <Button fx:id="btn2" layoutX="81.0" layoutY="121.0" mnemonicParsing="false"
-      onAction="#handleButtonAction" text="Click Here To goto scene 3"/>
-    <Label layoutX="122.0" layoutY="55.0" prefHeight="14.0" prefWidth="77.0"
-      text="This is Scene 1"/>
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="725.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                <Label layoutX="14.0" layoutY="33.0" prefHeight="30.0" prefWidth="158.0" text="Основное меню">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="725.0">
+                    <menus>
+                      <Menu mnemonicParsing="false" text="File">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Close" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Edit">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Delete" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Help">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="About" />
+                        </items>
+                      </Menu>
+                    </menus>
+                  </MenuBar>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="270.0" prefWidth="722.0">
+               <children>
+                  <MenuButton layoutX="89.0" layoutY="23.0" mnemonicParsing="false" text="О работе">
+                    <items>
+                      <MenuItem fx:id="menu1" mnemonicParsing="false" text="Описание" />
+                      <MenuItem fx:id="menu2" mnemonicParsing="false" text="Схема " />
+                    </items>
+                  </MenuButton>
+                  <MenuButton layoutX="325.0" layoutY="23.0" mnemonicParsing="false" text="Объект">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Описание" />
+                        <MenuItem mnemonicParsing="false" text="Схема установки" />
+                     </items>
+                  </MenuButton>
+                  <MenuButton layoutX="524.0" layoutY="23.0" mnemonicParsing="false" text="Синтез АСР">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Описание" />
+                        <MenuItem mnemonicParsing="false" text="Схема установки" />
+                     </items>
+                  </MenuButton>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+<!--      <Button fx:id="btn4" layoutX="550.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="54.0" prefWidth="118.0" text="Выход" />-->
+    <Button fx:id="btn2" layoutX="101.0" layoutY="279.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Click Here To goto scene 3" />
   </children>
 </AnchorPane>
-
