--- a/src/main/resources/com/example/diplom1/Process.fxml
+++ b/src/main/resources/com/example/diplom1/Process.fxml
@@ -2,19 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
    <children>
-      <Text fill="DARKORANGE" layoutX="30.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Печь состоит из 24 однотипных секций, вентиляционного оборудо-вания, газового оборудования, оборудования контроля и регулированияРоликовый конвейр приводится в движение тремя приводами Тепловойрежим поддерживаетя за счет сторания природного газа над и подконвейером с обоих сторон печи Природный газ подается в инжек-ционные горелки Общее число горелок в печи 120 шт Они распо-пожены c обоих сторон над и под роликами в шахматном порядкеГазопровод печи разбит на регулируемые участки включающие в себя11 коллекторов Каждый коллектор оборудован запорной арматуройрегулирующим краном манометром запальником и продувным газопроводомВентиляционное оборудование предназначено для отбора дымовыхгазов и горячего воздуха из печи a также для подачи холодноговоздуха на охлаждение плиток Поступление холодного воздуха научасток резкого охлаждения производится вентилятором через отверстияохлаждение DEL стенах расположенных плиток происходит над роликами BU последих секций секциях PS 17 оборудованныхобдувочными устройствами" textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
+      <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Печь состоит из 24 однотипных секций, вентиляционного оборудо-вания, газового оборудования, оборудования контроля и регулированияРоликовый конвейр приводится в движение тремя приводами Тепловойрежим поддерживаетя за счет сторания природного газа над и подконвейером с обоих сторон печи Природный газ подается в инжек-ционные горелки Общее число горелок в печи 120 шт Они распо-пожены c обоих сторон над и под роликами в шахматном порядкеГазопровод печи разбит на регулируемые участки включающие в себя11 коллекторов Каждый коллектор оборудован запорной арматуройрегулирующим краном манометром запальником и продувным газопроводомВентиляционное оборудование предназначено для отбора дымовыхгазов и горячего воздуха из печи a также для подачи холодноговоздуха на охлаждение плиток Поступление холодного воздуха научасток резкого охлаждения производится вентилятором через отверстияохлаждение DEL стенах расположенных плиток происходит над роликами BU последих секций секциях PS 17 оборудованныхобдувочными устройствами" textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
          <font>
-            <Font name="System Italic" size="24.0" />
+            <Font name="System Italic" size="18.0" />
          </font>
       </Text>
-      <Label layoutX="434.0" layoutY="39.0" text="Описание печи обжига" textFill="#ff8c00">
+      <Label layoutX="434.0" text="Описание печи обжига" textFill="#ff8c00">
          <font>
             <Font name="System Italic" size="31.0" />
          </font>
@@ -24,5 +25,10 @@
             <Font name="System Italic" size="30.0" />
          </font>
       </Button>
+      <ImageView fitHeight="347.0" fitWidth="873.0" layoutX="162.0" layoutY="46.0">
+         <image>
+            <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoPechi.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
