--- a/src/main/resources/com/example/diplom1/Diagnost.fxml
+++ b/src/main/resources/com/example/diplom1/Diagnost.fxml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
    <children>
-      <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="В основу построения модели объекта  заложены уравнениятеплового баланса печи.Динамика печи представлена  дробно - рациональной функциейс запаздыванием. — Значения  температур в различных зонах печимогут служить промежуточными переменными, изменяющимися при изменениирасхода топлива. Исходя из этого и их особенностей технологическогопроцесса, печь обжига целесообразно разделить на пять зон, по числурегулируемых и контролируемых переменных — (значения температуры взонах). Тогда динамическая модель печи монет быть представлена вв виде последовательно соединенных пяти линейных динамических звеньев.каждое из которых описывает динамику i-зоны печи" textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
+      <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="В основу построения модели объекта  заложены уравнениятеплового баланса печи. Динамика печи представлена  дробно - рациональной функциейс запаздыванием. — Значения  температур в различных зонах печимогут служить промежуточными переменными, изменяющимися при изменениирасхода топлива. Исходя из этого и их особенностей технологическогопроцесса, печь обжига целесообразно разделить на пять зон, по числурегулируемых и контролируемых переменных — (значения температуры взонах). Тогда динамическая модель печи монет быть представлена вв виде последовательно соединенных пяти линейных динамических звеньев.каждое из которых описывает динамику i-зоны печи" textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
          <font>
             <Font name="System Italic" size="22.0" />
          </font>
       </Text>
-      <Label layoutX="211.0" layoutY="22.0" text="Динамическая модель печи обжига керамической плитки " textFill="#ff8c00">
+      <Label layoutX="179.0" layoutY="-9.0" text="Динамическая модель печи обжига керамической плитки " textFill="#ff8c00">
          <font>
             <Font name="System Italic" size="31.0" />
          </font>
@@ -25,7 +22,7 @@
             <Font name="System Italic" size="30.0" />
          </font>
       </Button>
-      <ImageView fitHeight="313.0" fitWidth="549.0" layoutX="322.0" layoutY="68.0">
+      <ImageView fitHeight="352.0" fitWidth="717.0" layoutX="240.0" layoutY="37.0">
          <image>
             <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoPhormul.png" />
          </image>
