--- a/src/main/resources/com/example/diplom1/TempPr.fxml
+++ b/src/main/resources/com/example/diplom1/TempPr.fxml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
    <children>
       <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="В соответствии с требованиями технологического процесса весьпроцесс обжига можно разделить на восемь температурных зонв первой зоне происходит нагрев плитки до 850 900 с. Втораязона, где плитка нагревается до 908 - 950 С, является периодомупругих деформаций. При дальнейшем нагревании до 1040 - 1080 св третьей зоне происходит разрушение кристаллических решеток глинистых минералов и образование расплавов. В четвертой зонепроисходит выдержка температуры для ее выравнивания по сечениюизделий и накопления расплава, необходимого для повышениякачества изделий. в пятой зоне, при охлаждении плиток до 600 спроисходит затвердевание жидкой фазы. в следующей шестой зонеплитки охлаждаются еще до 500 с. Охлаждение плиток еще на100 с в седьмой зоне характеризуется модификационными изменениямикварца. восьмой зоне плитки охлаждаются до комнатой температуры.При разработке схемы автоматизации важнейшей задачей являетсяреализация и поддержание температурного режима по зонам печи.Температурный режим, представленный в графическом виде, приведенв иллюстрации." textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
          <font>
             <Font name="System Italic" size="18.0" />
          </font>
       </Text>
-      <Label layoutX="422.0" layoutY="22.0" text="Температурный режим" textFill="#ff8c00">
+      <Label layoutX="422.0" layoutY="7.0" text="Температурный режим" textFill="#ff8c00">
          <font>
             <Font name="System Italic" size="31.0" />
          </font>
@@ -25,7 +22,7 @@
             <Font name="System Italic" size="30.0" />
          </font>
       </Button>
-      <ImageView fitHeight="313.0" fitWidth="549.0" layoutX="324.0" layoutY="68.0">
+      <ImageView fitHeight="344.0" fitWidth="681.0" layoutX="249.0" layoutY="46.0">
          <image>
             <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoGraf.png" />
          </image>
