--- a/src/main/resources/com/example/diplom1/AboutWork.fxml
+++ b/src/main/resources/com/example/diplom1/AboutWork.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.effect.GaussianBlur?>
@@ -11,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -35,6 +35,12 @@
             </BoxBlur>
          </effect>
       </ImageView>
+         <Button fx:id="Back" layoutY="608.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0" prefWidth="1200.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   " text="Вернуться" textFill="WHITE">
+            <font>
+               <Font name="System Italic" size="30.0" />
+            </font>
+         </Button>
+      <Pane layoutX="75.0" layoutY="14.0" opacity="0.35" prefHeight="579.0" prefWidth="1036.0" style="-fx-background-color: white;" />
       <Label layoutX="435.0" layoutY="14.0" prefHeight="58.0" prefWidth="331.0" text="Больше о работе" textAlignment="CENTER" textFill="#00135e">
          <font>
             <Font name="System Italic" size="40.0" />
@@ -45,12 +51,14 @@
             <Font name="System Italic" size="40.0" />
          </font>
       </Label>
-      <TextArea layoutX="96.0" layoutY="131.0" opacity="0.44" prefHeight="447.0" prefWidth="993.0" style="-fx-background-color: #ff6f1b;" />
-         <Button fx:id="Back" layoutY="608.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0" prefWidth="1200.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   " text="Вернуться" textFill="WHITE">
-            <font>
-               <Font name="System Italic" size="30.0" />
-            </font>
-         </Button>
+      <Text fill="#00135e" layoutX="116.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Программный комплекс предназначен для изучения процесса обжига керамических изделий как объекта моделирования и автоматизации. Он позволяет выполнить:" textAlignment="JUSTIFY" wrappingWidth="968.13671875">
+         <font>
+            <Font name="System Italic" size="30.0" />
+         </font>
+         <effect>
+            <Bloom />
+         </effect>
+      </Text>
       <Text fill="#00135e" layoutX="109.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- Контроль достоверности информационного канала измерения;" textAlignment="JUSTIFY" wrappingWidth="968.13671875">
          <font>
             <Font name="System Italic" size="30.0" />
@@ -80,14 +88,6 @@
          <font>
             <Font name="System Italic" size="30.0" />
          </font>
-      </Text>
-      <Text fill="#00135e" layoutX="116.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Программный комплекс предназначен для изучения процесса обжига керамических изделий как объекта моделирования и автоматизации. Он позволяет выполнить:" textAlignment="JUSTIFY" wrappingWidth="968.13671875">
-         <font>
-            <Font size="30.0" />
-         </font>
-         <effect>
-            <Bloom />
-         </effect>
       </Text>
    </children>
 </AnchorPane>
