--- a/src/main/resources/com/example/diplom1/SceneMenuMain.fxml
+++ b/src/main/resources/com/example/diplom1/SceneMenuMain.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="897.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="897.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
    <center>
       <ImageView fitHeight="146.0" fitWidth="546.0" BorderPane.alignment="CENTER">
          <image>
@@ -55,9 +45,9 @@
    <top>
       <Pane prefHeight="100.0" prefWidth="897.0" style="-fx-background-color: #14242B;" BorderPane.alignment="CENTER">
          <children>
-            <TitledPane animated="false" prefHeight="99.0" prefWidth="897.0" style="-fx-background-color: #14242B;" text="Menu">
+            <TitledPane animated="false" layoutY="1.0" prefHeight="99.0" prefWidth="897.0" style="-fx-background-color: #14242B;" text="Menu">
               <content>
-                <AnchorPane id="Slider" minHeight="0.0" minWidth="0.0" prefHeight="157.0" prefWidth="895.0" style="-fx-background-color: #14242B;">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="157.0" prefWidth="895.0" style="-fx-background-color: #14242B;">
                      <children>
                         <HBox prefHeight="98.0" prefWidth="897.0" style="-fx-background-color: #14242B;">
                            <children>
@@ -67,7 +57,7 @@
                                     <Font name="System Italic" size="18.0" />
                                  </font>
                                           </Button>
-                              <MenuButton fx:id="OnObject" mnemonicParsing="false" prefHeight="68.0" prefWidth="180.0" style="          -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;     -fx-background-radius: 8;     -fx-background-color:       #ff6d19,         #9d4024,         #d86e3a,         #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );     -fx-font-weight: bold;     -fx-font-size: 1.1em;" text="Объект" textFill="WHITE">
+                              <MenuButton mnemonicParsing="false" prefHeight="68.0" prefWidth="180.0" style="          -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;     -fx-background-radius: 8;     -fx-background-color:       #ff6d19,         #9d4024,         #d86e3a,         #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );     -fx-font-weight: bold;     -fx-font-size: 1.1em;" text="Объект" textFill="WHITE">
                            <items>
                                     <MenuItem mnemonicParsing="false" text="1">
                                        <graphic>
@@ -125,7 +115,7 @@
                                  </font>
                               </Button>
                   
-                               <Button fx:id="Exit" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="69.0" prefWidth="180.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,     #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );     -fx-font-weight: bold;   -fx-font-size: 1.1em;" text="Выход" textFill="WHITE">
+                               <Button fx:id="Exit1" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="69.0" prefWidth="180.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,     #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );     -fx-font-weight: bold;   -fx-font-size: 1.1em;" text="Выход" textFill="WHITE">
                                    <font>
                                     <Font name="System Italic" size="18.0" />
                                    </font>
